--- a/package.json
+++ b/package.json
@@ -11,6 +11,14 @@
   "bin": {
     "link-modules": "index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alitalipcalikoglu/auto-module-linking.git"
+  },
+  "bugs": {
+    "url": "https://github.com/alitalipcalikoglu/auto-module-linking/issues"
+  },
+  "homepage": "https://github.com/alitalipcalikoglu/auto-module-linking#readme",
   "author": "Ali Talip ÇALIKOĞLU <acalikoglu@outlook.com>",
   "license": "MIT"
 }
